--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</header>
 	<nav class="j">
 		<ul>
-           <li><a href="./indexum.html"><h5 class="m">ESMALTES</h5></a></li>
+           <li><a href="./indexum.html"><h5 class="m">ESMALT</h5></a></li>
 		   <li><a href="./tratamento.html"><h5 class="m">TRATAMENTO</h5></a></li>
 		   <li><a href="./pele.html"><h5 class="m">PELE</h5></a></li>
 		   <li><a href="./olhos.html"><h5 class="m">OLHOS</h5></a></li>
